Chris - DevOrg/src/objects/AM_Asset_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>AM_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>AM_Asset__c</referenceTo>
        <relationshipLabel>Asset Allocations</relationshipLabel>
        <relationshipName>Asset_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AM_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asset Allocations</relationshipLabel>
        <relationshipName>Asset_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AM_Start_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Asset Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AM_Asset__c</columns>
        <columns>AM_Start_Date__c</columns>
        <columns>AM_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{00000000}</displayFormat>
        <label>Asset Alocation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Asset_Date_Range_Validation</fullName>
        <active>true</active>
        <description>End date must be &gt; Start Date</description>
        <errorConditionFormula>AM_Start_Date__c &gt;= AM_End_Date__c</errorConditionFormula>
        <errorDisplayField>AM_End_Date__c</errorDisplayField>
        <errorMessage>Requested End Date must be later than requested Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_should_be_Now</fullName>
        <active>true</active>
        <description>This validation rule prevents the user from entering a future date for begin date.</description>
        <errorConditionFormula>AND(ISCHANGED(AM_Start_Date__c),OR(AM_Start_Date__c  &gt;  NOW(), AM_Start_Date__c &lt; NOW()))</errorConditionFormula>
        <errorDisplayField>AM_Start_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be in the past or future.</errorMessage>
    </validationRules>
</CustomObject>